# zephyr

boards/arm/atsamr21_xpro/: pinmux.c
drivers/: CMakeLists.txt  Kconfig
drivers/usbh/: Kconfig  usbh_hcd_atsamx.c  usbh_hcd_stm32fx_fs.c
dts/arm/atmel/: samr21.dtsi
dts/bindings/usbh/: atmel,sam0-usbh.yaml  usbh.yaml
include/drivers/usbh/: usbh_ll.h
samples/subsys/usb/usb_host/: prj.conf  sample.yaml
samples/subsys/usb/usb_host/src/: main.c
subsys/: CMakeLists.txt  Kconfig
subsys/usbh/: CMakeLists.txt  Kconfig  app_cfg.h  license.txt  usbh_cfg.h  usbh_class.c  usbh_class.h  usbh_core.c  usbh_core.h  usbh_cpu.h  usbh_hc_cfg.c  usbh_hc_cfg.h  usbh_hub.c  usbh_hub.h  usbh_lib_mem.h  usbh_os.c  usbh_os.h  usbh_structs.h
subsys/usbh/Class/CDC/: usbh_cdc.c  usbh_cdc.h
subsys/usbh/Class/CDC/ACM/: usbh_acm.c
subsys/usbh/Class/FTDI/: usbh_ftdi.c
subsys/usbh/Class/HID/: usbh_hid.c  usbh_hidparser.c
subsys/usbh/Class/MSC/: usbh_msc.c  usbh_msc.h
subsys/usbh/HCD/: Kconfig  usbh_hcd_atsamx.c  usbh_ll.h
subsys/usbh/HCD/ATSAMx/: usbh_hcd_atsamx.c  usbh_hcd_atsamx.h
subsys/usbh/HCD/EHCI/: usbh_hcd_ehci.c
subsys/usbh/HCD/STM32F_FS/: usbh_hcd_stm32fx_fs.c  usbh_hcd_stm32fx_fs.h
subsys/usbh/Source/: usbh_class.c  usbh_class.h  usbh_core.c  usbh_core.h  usbh_err.h  usbh_hub.c  usbh_hub.h
subsys/usbh/bsp/: bsp_usbh_imxrt_1050.c  bsp_usbh_samr21.c  bsp_usbh_template.h
subsys/usbh/class/: usbh_msc.c  usbh_msc.h
subsys/usbh/hcd/: CMakeLists.txt  usbh_hcd_atsamx.c  usbh_ll.h
